--- a/css/login.css
+++ b/css/login.css
@@ -34,8 +34,8 @@ fieldset {
 
 .form-group {
     width: 100%;/* This element must use 100% of the width */
-    padding-top: .5em;
-    padding-bottom: .5em;/* It should have a separation of .5em from elements on top of it and below it*/
+    padding: .5em 0;
+    /* It should have a separation of .5em from elements on top of it and below it*/
 }
 
 .form-label {
@@ -56,10 +56,10 @@ fieldset {
 }
 
 .form-control {
-    padding-top: 4px;
-    padding-bottom: 4px;/* There must be 4px on top of the text and below the text of an input with this class */
-    margin-top: .5em;
-    margin-bottom: .5em;/* It should have a separation of .5em from elements on top of it and below it */
+    padding: 4px 0;
+    /* There must be 4px on top of the text and below the text of an input with this class */
+    margin: .5em 0;
+    /* It should have a separation of .5em from elements on top of it and below it */
 
     width: calc(100% - 4px);/* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
