--- a/css/messages.css
+++ b/css/messages.css
@@ -12,7 +12,7 @@ div {
     padding: .5em;
     border: 1px solid lightgrey;
     border-radius: 5px;
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 .informational{
