--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -80,12 +80,12 @@ section:nth-of-type(1) div:last-child {
 }
 
 section:nth-of-type(3) {
-  align-content: center;
+  align-items: center;
     /* enter needed declarations here */
 }
 
 section:nth-of-type(3) h3 {
-    flex-grow: 1;
+    margin-right: auto
     /* enter needed declarations here */
 
 }
@@ -102,7 +102,7 @@ section:nth-of-type(3) h3 {
     height: 5em;
     width: 5em;
     background: brown;
-    flex-grow: 3;
+    flex-grow: 1;
     /* enter needed declarations here */
 }
 
@@ -126,6 +126,7 @@ section:nth-of-type(6) {
     height: 14em;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     /* enter needed declarations here */
 }
 
