--- a/css/custom.css
+++ b/css/custom.css
@@ -3,3 +3,6 @@
     background-size: cover;
     height: 346px;
 }
+
+
+/*<div class="align-self-center flex-grow-1 fs-2 bg-light p-2 text-black bg-opacity-50 d-none d-sm-block"><p class="text-center">Welcome to Pizza World!</p></div>*/
