--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -11,16 +11,45 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    background-color: #fff;
+    background-color: #ece9e9;
 }
 
 #map {
     /* the width and height may be set to any size */
+
     width: 100%;
     height: 300px;
     flex-grow: 1;
 }
 
+.card {
+    background: linear-gradient(360deg, rgba(2,0,36,1) 0%, rgba(9,114,121,1) 35%, rgba(0,212,255,1) 100%);
+    color: #ffffff;
+}
+
+.header {
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,114,121,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+.card-header {
+    background-color: #e2e0e0;
+    color: #565454;
+
+}
+
+.button {
+    color: #565454;
+}
+
+input {
+    width: 300px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
 /* THE PAGE WRAPPER MIMICS THE BODY, ONLY WE ARE ABLE TO DO MORE WITH IT IF NECESSARY */
 .page-wrapper {
     display:flex;
